--- a/about.html
+++ b/about.html
@@ -5,21 +5,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GeNext</title>
-  <meta name="description" content="Genext. Certification that goes beyond the ordinary." />
-  <meta name="keywords" content="GeNext, Culture, Customers, Community, Business Transformation, Employee Engagement, Customer Experience, Purpose-led Growth" />
+  <meta name="description" content="GeNext. Certification that goes beyond the ordinary." />
+  <meta name="keywords"
+    content="GeNext, Culture, Customers, Community, Business Transformation, Employee Engagement, Customer Experience, Purpose-led Growth" />
   <meta name="author" content="GeNext" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="GeNext - Culture. Customers. Community.">
-  <meta property="og:description" content="Genext. Certification that goes beyond the ordinary.">
+  <meta property="og:description" content="GeNext. Certification that goes beyond the ordinary.">
   <meta property="og:image" content="assets/imgs/social/social.webp">
-  <meta property="og:url" content="https://genext.io">
+  <meta property="og:url" content="https://GeNext.io">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="GeNext - Culture. Customers. Community.">
-  <meta name="twitter:description" content="Genext. Certification that goes beyond the ordinary.">
+  <meta name="twitter:description" content="GeNext. Certification that goes beyond the ordinary.">
   <meta name="twitter:image" content="assets/imgs/social/social.webp">
 
   <link rel="icon" href="assets/imgs/template/favicon.svg" type="image/svg+xml" />
@@ -190,7 +191,7 @@
           businesses are built not only on profit, but on purpose, people, and positive impact. That’s why we created a
           certification that looks beyond the balance sheet—one that evaluates how your business engages with employees,
           delights customers, and supports the community around it.</p>
-        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">Genext Certification is a mark of
+        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">GeNext Certification is a mark of
           distinction. It signifies that your business meets the highest standards of performance, ethics, and
           innovation.</p>
         <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">Tailored specifically for small
@@ -220,12 +221,85 @@
       <img src="assets/imgs/pages/img-29.png" alt="" class="mt-12 rounded-3xl">
     </div>
   </section>
+
+  <section id="certification" class="relative py-20 lg:py-24 lg:mb-16">
+    <div class="container px-4">
+      <h1 class="heading-1"><span class="font-light">The </span>GeNext<span class="font-light"> Team </span></h1>
+      <div class="flex justify-between items-center gap-8 lg:gap-32 mt-12 flex-col lg:flex-row">
+        <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">GeNext Certification is
+          tailor-made for SMEs. If you operate for profit and have been in business for at least 12 months, you're
+          eligible. </p>
+
+      </div>
+
+      <div class="grid lg:grid-cols-3 gap-[30px] pt-20">
+        <!--Author box-->
+        <div
+          class="relative w-full min-w-[310px] border-2 border-neutral-300 dark:border-neutral-dark-300 rounded-3xl bg-neutral-0 dark:bg-neutral-dark-0 py-12 px-4 overflow-hidden max-h-[414px]">
+          <div class="bg-primary-light-950 absolute top-0 left-0 right-0 h-28 w-full z-1"></div>
+          <div
+            class="w-full relative z-2 text-center flex flex-col justify-center content-center justify-items-center justify-self-center items-center">
+            <div
+              class="w-36 h-36 rounded-full border-4 border-neutral-0 dark:border-neutral-dark-300 overflow-hidden mb-8">
+              <img src="assets/imgs/avatar/avatar-12.png" />
+            </div>
+            <div class="flex-col justify-start items-center gap-4 inline-flex">
+              <a class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
+                href="vandy.html">Vandy</a>
+              <div class="text-center text-neutral-700 text-base font-medium leading-normal">Goods and services. It
+                involves entrepreneurship, management, marketing, finance, and many other aspects. Businesses aim to
+                generate</div>
+
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="relative w-full min-w-[310px] border-2 border-neutral-300 dark:border-neutral-dark-300 rounded-3xl bg-neutral-0 dark:bg-neutral-dark-0 py-12 px-4 overflow-hidden max-h-[414px]">
+          <div class="bg-primary-light-950 absolute top-0 left-0 right-0 h-28 w-full z-1"></div>
+          <div
+            class="w-full relative z-2 text-center flex flex-col justify-center content-center justify-items-center justify-self-center items-center">
+            <div
+              class="w-36 h-36 rounded-full border-4 border-neutral-0 dark:border-neutral-dark-300 overflow-hidden mb-8">
+              <img src="assets/imgs/avatar/avatar-01.webp" />
+            </div>
+            <div class="flex-col justify-start items-center gap-4 inline-flex">
+              <a class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
+                href="james.html">James</a>
+              <div class="text-center text-neutral-700 text-base font-medium leading-normal">Goods and services. It
+                involves entrepreneurship, management, marketing, finance, and many other aspects. Businesses aim to
+                generate</div>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="relative w-full min-w-[310px] border-2 border-neutral-300 dark:border-neutral-dark-300 rounded-3xl bg-neutral-0 dark:bg-neutral-dark-0 py-12 px-4 overflow-hidden max-h-[414px]">
+          <div class="bg-primary-light-950 absolute top-0 left-0 right-0 h-28 w-full z-1"></div>
+          <div
+            class="w-full relative z-2 text-center flex flex-col justify-center content-center justify-items-center justify-self-center items-center">
+            <div
+              class="w-36 h-36 rounded-full border-4 border-neutral-0 dark:border-neutral-dark-300 overflow-hidden mb-8">
+              <img src="assets/imgs/avatar/avatar-02.webp" />
+            </div>
+            <div class="flex-col justify-start items-center gap-4 inline-flex">
+              <a class="text-center text-neutral-950 dark:text-neutral-dark-950 text-4xl font-bold"
+                href="deb.html">Deb</a>
+              <div class="text-center text-neutral-700 text-base font-medium leading-normal">Goods and services. It
+                involves entrepreneurship, management, marketing, finance, and many other aspects. Businesses aim to
+                generate</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <!--Hero 1-->
   <section id="certification" class="relative py-20 lg:py-24 lg:mb-16">
     <div class="container px-4">
-      <h1 class="heading-1">Genext <span class="font-light">Certification</span></h1>
+      <h1 class="heading-1">GeNext <span class="font-light">Certification</span></h1>
       <div class="flex justify-between items-center gap-8 lg:gap-32 mt-12 flex-col lg:flex-row">
-        <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">Genext Certification is
+        <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">GeNext Certification is
           tailor-made for SMEs. If you operate for profit and have been in business for at least 12 months, you're
           eligible. </p>
 
@@ -370,7 +444,7 @@
       <div class="border-t border-neutral-950 dark:border-neutral-dark-500 pb-20 "></div>
 
       <div class="pt-8">
-        <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© Genext Group 2025. Designed by <a
+        <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© GeNext Group 2025. Designed by <a
             target="_blank" href="https://story-x.co.uk/" class="text-neutral-950 dark:text-neutral-dark-950">StoryX</a>
         </p>
       </div>
