--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GENEXT</title>
+    <title>GeNext</title>
     <link rel="icon" href="assets/imgs/template/favicon.svg" type="image/svg+xml" />
     <script src="assets/js/vendors/color-modes.js"></script>
     <link rel="preconnect" href="https://fonts.bunny.net">
@@ -215,7 +215,7 @@
                                 </div>
                             </div>
                             <h3><a class="text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold leading-snug item-link"
-                                    href="single.html">This Earth day, Genext Launches</a></h3>
+                                    href="single.html">This Earth day, GeNext Launches</a></h3>
                         </div>
                     </div>
                     <div class="flex-col justify-start items-start gap-5 inline-flex hover-up">
@@ -291,7 +291,7 @@
                                 </div>
                             </div>
                             <h3><a class="text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold leading-snug item-link"
-                                    href="single.html">The Genext Methodology</a></h3>
+                                    href="single.html">The GeNext Methodology</a></h3>
                         </div>
                     </div>
                     <div class="flex-col justify-start items-start gap-5 inline-flex hover-up">
@@ -342,7 +342,7 @@
                                 </div>
                             </div>
                             <h3><a class="text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold leading-snug item-link"
-                                    href="single.html">Genext: Certification that goes
+                                    href="single.html">GeNext: Certification that goes
                                     beyond the ordinary</a></h3>
                         </div>
                     </div>
@@ -367,7 +367,7 @@
                         <p class="font-medium text-neutral-950 dark:text-neutral-dark-950 mb-8 lg:mb-12 max-w-[350px]">
                             It involves entrepreneurship, management, marketing, finance, and many other aspects. Become
                             a certified
-                            Genext Business.
+                            GeNext Business.
                         </p>
                         <div class="flex gap-2">
                             <div
@@ -474,9 +474,9 @@
     <!--Hero 1-->
     <section id="certification" class="relative py-20 lg:py-24 lg:mb-16">
         <div class="container px-4">
-            <h1 class="heading-1">Genext <span class="font-light">Certification</span></h1>
+            <h1 class="heading-1">GeNext <span class="font-light">Certification</span></h1>
             <div class="flex justify-between items-center gap-8 lg:gap-32 mt-12 flex-col lg:flex-row">
-                <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">Genext
+                <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">GeNext
                     Certification is
                     tailor-made for SMEs. If you operate for profit and have been in business for at least 12 months,
                     you're
@@ -648,7 +648,7 @@
             <div class="border-t border-neutral-950 dark:border-neutral-dark-500 pb-20 "></div>
 
             <div class="pt-8">
-                <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© Genext Group 2025. Designed by <a
+                <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© GeNext Group 2025. Designed by <a
                         target="_blank" href="https://story-x.co.uk/"
                         class="text-neutral-950 dark:text-neutral-dark-950">StoryX</a>
                 </p>
