--- a/certification-beyond.html
+++ b/certification-beyond.html
@@ -178,30 +178,30 @@
                     <div
                         class="single-content text-base font-medium text-neutral-950 dark:text-neutral-dark-950 leading-relaxed max-w-[850px]">
 
-                        <h1>Genext: Certification That Goes Beyond the Ordinary</h1>
+                        <h1>GeNext: Certification That Goes Beyond the Ordinary</h1>
 
-<p>In an era where consumers are more informed, stakeholders more demanding, and businesses under greater scrutiny, standing out for the right reasons has never been more important. That’s where <strong>Genext Certification</strong> comes in — a gold standard that recognises businesses not just for what they do, but for <em>how</em> they do it.</p>
+<p>In an era where consumers are more informed, stakeholders more demanding, and businesses under greater scrutiny, standing out for the right reasons has never been more important. That’s where <strong>GeNext Certification</strong> comes in — a gold standard that recognises businesses not just for what they do, but for <em>how</em> they do it.</p>
 
-<h3>Why Choose Genext Certification?</h3>
+<h3>Why Choose GeNext Certification?</h3>
 
 <h3>1. A 360° Business Evaluation</h3>
-<p>Genext Certification doesn’t just scratch the surface. It digs deep into every area of your business — from operations and supply chains to employee wellbeing and environmental impact. This holistic approach ensures that certified companies aren’t simply excelling in one department but are champions of sustainable and ethical practices across the board.</p>
+<p>GeNext Certification doesn’t just scratch the surface. It digs deep into every area of your business — from operations and supply chains to employee wellbeing and environmental impact. This holistic approach ensures that certified companies aren’t simply excelling in one department but are champions of sustainable and ethical practices across the board.</p>
 
 <h3>2. Built on Transparency and Accountability</h3>
-<p>Trust is everything in today’s business world. Genext Certification sends a powerful message to your customers, partners, and investors: your business operates with integrity, transparency, and a commitment to continuous improvement. It's more than a badge — it's a promise.</p>
+<p>Trust is everything in today’s business world. GeNext Certification sends a powerful message to your customers, partners, and investors: your business operates with integrity, transparency, and a commitment to continuous improvement. It's more than a badge — it's a promise.</p>
 
 <h3>3. Made for SMEs</h3>
-<p>While many certification programs are designed with big corporations in mind, Genext was built specifically for small and medium-sized enterprises. If your business is for-profit and has been operating for at least 12 months, you’re eligible. It’s inclusive, practical, and designed to fit the realities of SME life.</p>
+<p>While many certification programs are designed with big corporations in mind, GeNext was built specifically for small and medium-sized enterprises. If your business is for-profit and has been operating for at least 12 months, you’re eligible. It’s inclusive, practical, and designed to fit the realities of SME life.</p>
 
 <h3>4. A Competitive Edge That Matters</h3>
-<p>Consumers are voting with their wallets, choosing businesses that align with their values. Genext Certification offers a genuine competitive advantage, positioning your business as a leader in sustainability, responsibility, and long-term thinking.</p>
+<p>Consumers are voting with their wallets, choosing businesses that align with their values. GeNext Certification offers a genuine competitive advantage, positioning your business as a leader in sustainability, responsibility, and long-term thinking.</p>
 
 <h3>5. Local Roots, Global Impact</h3>
-<p>Becoming Genext Certified means joining a growing network of businesses committed to making a difference — locally and globally. It’s about more than improving your own operations. It’s about contributing to a movement that’s shaping the future of business for good.</p>
+<p>Becoming GeNext Certified means joining a growing network of businesses committed to making a difference — locally and globally. It’s about more than improving your own operations. It’s about contributing to a movement that’s shaping the future of business for good.</p>
 
 <h3>How Does It Work?</h3>
 
-<p>The Genext Certification process is designed to be both <strong>rigorous and accessible</strong>, ensuring that high standards are met without unnecessary complexity:</p>
+<p>The GeNext Certification process is designed to be both <strong>rigorous and accessible</strong>, ensuring that high standards are met without unnecessary complexity:</p>
 
 <h3>Step 1: Initial Assessment</h3>
 <p>Begin with a detailed self-assessment to evaluate your business’s current social and environmental performance. It’s an opportunity to reflect and prepare.</p>
@@ -213,14 +213,14 @@
 <p>Independent experts will conduct a thorough review of your submission and carry out an on-site verification to ensure your claims match your reality.</p>
 
 <h3>Step 4: Certification Decision</h3>
-<p>Based on the assessment, Genext will determine if your business meets the required standards. If successful, you’ll receive the official Genext Certification — a symbol of your business’s values and impact.</p>
+<p>Based on the assessment, GeNext will determine if your business meets the required standards. If successful, you’ll receive the official GeNext Certification — a symbol of your business’s values and impact.</p>
 
 <h3>Step 5: Continuous Improvement</h3>
 <p>Certification isn’t the end of the journey — it’s just the beginning. Maintaining your status means committing to ongoing improvement and growth, ensuring your business continues to lead by example.</p>
 
 <h3>Ready to Stand Out?</h3>
 
-<p>Genext Certification is more than just a stamp of approval — it’s a roadmap to becoming a better business. If you’re ready to gain recognition for the work you're doing, build trust, and join a community of change-makers, Genext is the certification that goes beyond the ordinary.</p>
+<p>GeNext Certification is more than just a stamp of approval — it’s a roadmap to becoming a better business. If you’re ready to gain recognition for the work you're doing, build trust, and join a community of change-makers, GeNext is the certification that goes beyond the ordinary.</p>
 
 <p><strong>Learn more and start your journey today.</strong></p>
 
@@ -244,9 +244,9 @@
     <!--Hero 1-->
     <section id="certification" class="relative py-20 lg:py-24 lg:mb-16">
         <div class="container px-4">
-            <h1 class="heading-1">Genext <span class="font-light">Certification</span></h1>
+            <h1 class="heading-1">GeNext <span class="font-light">Certification</span></h1>
             <div class="flex justify-between items-center gap-8 lg:gap-32 mt-12 flex-col lg:flex-row">
-                <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">Genext
+                <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">GeNext
                     Certification is
                     tailor-made for SMEs. If you operate for profit and have been in business for at least 12 months,
                     you're
@@ -410,7 +410,7 @@
             <div class="border-t border-neutral-950 dark:border-neutral-dark-500 pb-20 "></div>
 
             <div class="pt-8">
-                <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© Genext Group 2025. Designed by <a
+                <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© GeNext Group 2025. Designed by <a
                         target="_blank" href="https://story-x.co.uk/"
                         class="text-neutral-950 dark:text-neutral-dark-950">StoryX</a>
                 </p>
