--- a/genext-launch.html
+++ b/genext-launch.html
@@ -5,21 +5,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GeNext</title>
-  <meta name="description" content="Genext. Certification that goes beyond the ordinary." />
+  <meta name="description" content="GeNext. Certification that goes beyond the ordinary." />
   <meta name="keywords" content="GeNext, Culture, Customers, Community, Business Transformation, Employee Engagement, Customer Experience, Purpose-led Growth" />
   <meta name="author" content="GeNext" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="GeNext - Culture. Customers. Community.">
-  <meta property="og:description" content="Genext. Certification that goes beyond the ordinary.">
+  <meta property="og:description" content="GeNext. Certification that goes beyond the ordinary.">
   <meta property="og:image" content="assets/imgs/social/social.webp">
-  <meta property="og:url" content="https://genext.io">
+  <meta property="og:url" content="https://GeNext.io">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="GeNext - Culture. Customers. Community.">
-  <meta name="twitter:description" content="Genext. Certification that goes beyond the ordinary.">
+  <meta name="twitter:description" content="GeNext. Certification that goes beyond the ordinary.">
   <meta name="twitter:image" content="assets/imgs/social/social.webp">
 
   <link rel="icon" href="assets/imgs/template/favicon.svg" type="image/svg+xml" />
@@ -197,10 +197,10 @@
                         <h1 class="mb-4">🌍 <strong>This Earth Day, go beyond the ordinary.</strong>
                         </h1>
 
-                        <p>We’re proud to launch <strong>Genext Certification</strong> a new benchmark for businesses
+                        <p>We’re proud to launch <strong>GeNext Certification</strong> a new benchmark for businesses
                             ready to lead with purpose.</p>
 
-                        <p>At Genext, we don’t just look at profits. We evaluate your entire ecosystem:</p>
+                        <p>At GeNext, we don’t just look at profits. We evaluate your entire ecosystem:</p>
 
                         <ul class="list-disc list-inside mb-4">
                             <li><strong>Culture</strong></li>
@@ -281,9 +281,9 @@
     <!--Hero 1-->
     <section id="certification" class="relative py-20 lg:py-24 lg:mb-16">
         <div class="container px-4">
-            <h1 class="heading-1">Genext <span class="font-light">Certification</span></h1>
+            <h1 class="heading-1">GeNext <span class="font-light">Certification</span></h1>
             <div class="flex justify-between items-center gap-8 lg:gap-32 mt-12 flex-col lg:flex-row">
-                <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">Genext
+                <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">GeNext
                     Certification is
                     tailor-made for SMEs. If you operate for profit and have been in business for at least 12 months,
                     you're
@@ -447,7 +447,7 @@
             <div class="border-t border-neutral-950 dark:border-neutral-dark-500 pb-20 "></div>
 
             <div class="pt-8">
-                <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© Genext Group 2025. Designed by <a
+                <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© GeNext Group 2025. Designed by <a
                         target="_blank" href="https://story-x.co.uk/"
                         class="text-neutral-950 dark:text-neutral-dark-950">StoryX</a>
                 </p>
