--- a/landing.html
+++ b/landing.html
@@ -5,21 +5,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GeNext</title>
-  <meta name="description" content="Genext. Certification that goes beyond the ordinary." />
+  <meta name="description" content="GeNext. Certification that goes beyond the ordinary." />
   <meta name="keywords" content="GeNext, Culture, Customers, Community, Business Transformation, Employee Engagement, Customer Experience, Purpose-led Growth" />
   <meta name="author" content="GeNext" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="GeNext - Culture. Customers. Community.">
-  <meta property="og:description" content="Genext. Certification that goes beyond the ordinary.">
+  <meta property="og:description" content="GeNext. Certification that goes beyond the ordinary.">
   <meta property="og:image" content="assets/imgs/social/social.webp">
-  <meta property="og:url" content="https://genext.io">
+  <meta property="og:url" content="https://GeNext.io">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="GeNext - Culture. Customers. Community.">
-  <meta name="twitter:description" content="Genext. Certification that goes beyond the ordinary.">
+  <meta name="twitter:description" content="GeNext. Certification that goes beyond the ordinary.">
   <meta name="twitter:image" content="assets/imgs/social/social.webp">
 
   <link rel="icon" href="assets/imgs/template/favicon.svg" type="image/svg+xml" />
@@ -174,14 +174,14 @@
     <div class="container px-4">
       <div class="md:w-3/4 lg:w-3/4">
         <h1 class="heading-2 max-w-7xl mb-12 text-neutral-950 dark:text-neutral-dark-950"><span
-            class="font-light">Genext.</span> Certification that<span class="font-light"> goes beyond</span>
+            class="font-light">GeNext.</span> Certification that<span class="font-light"> goes beyond</span>
           the ordinary.
         </h1>
-        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">At Genext, we provide a
+        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">At GeNext, we provide a
           comprehensive evaluation of your business, encompassing every aspect from employees to customers. Our detailed
           assessment examines your social and environmental footprint, including supply chain practices, operational
           processes, charitable contributions, and marketing strategies.</p>
-        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">Achieving Genext Certification
+        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">Achieving GeNext Certification
           signifies that your business meets the highest standards of performance, ethics, and innovation. Our
           certification process, tailored specifically for SMEs, is designed to be both affordable and accessible.
           For-profit organisations that have been operating for at least 12 months are eligible to join the ranks of
@@ -238,7 +238,7 @@
       <div class="border-t border-neutral-950 dark:border-neutral-dark-500 pb-20 "></div>
 
       <div class="pt-8">
-        <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© Genext Group 2025. Designed by <a
+        <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© GeNext Group 2025. Designed by <a
             target="_blank" href="https://story-x.co.uk/" class="text-neutral-950 dark:text-neutral-dark-950">StoryX</a>
         </p>
       </div>
