--- a/page-contact.html
+++ b/page-contact.html
@@ -5,21 +5,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GeNext</title>
-  <meta name="description" content="Genext. Certification that goes beyond the ordinary." />
+  <meta name="description" content="GeNext. Certification that goes beyond the ordinary." />
   <meta name="keywords" content="GeNext, Culture, Customers, Community, Business Transformation, Employee Engagement, Customer Experience, Purpose-led Growth" />
   <meta name="author" content="GeNext" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="GeNext - Culture. Customers. Community.">
-  <meta property="og:description" content="Genext. Certification that goes beyond the ordinary.">
+  <meta property="og:description" content="GeNext. Certification that goes beyond the ordinary.">
   <meta property="og:image" content="assets/imgs/social/social.webp">
-  <meta property="og:url" content="https://genext.io">
+  <meta property="og:url" content="https://GeNext.io">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="GeNext - Culture. Customers. Community.">
-  <meta name="twitter:description" content="Genext. Certification that goes beyond the ordinary.">
+  <meta name="twitter:description" content="GeNext. Certification that goes beyond the ordinary.">
   <meta name="twitter:image" content="assets/imgs/social/social.webp">
 
   <link rel="icon" href="assets/imgs/template/favicon.svg" type="image/svg+xml" />
@@ -242,8 +242,8 @@
           </div>
           <div class="mt-4">
             <h6 class="text-2xl font-bold text-neutral-950 dark:text-neutral-dark-950 mb-2">Send Email</h6>
-            <p class="text-base font-medium text-neutral-700 dark:text-neutral-dark-700 mb-0">contact@genext.io</p>
-            <p class="text-base font-medium text-neutral-700 dark:text-neutral-dark-700 mb-0">support@genext.io</p>
+            <p class="text-base font-medium text-neutral-700 dark:text-neutral-dark-700 mb-0">contact@GeNext.io</p>
+            <p class="text-base font-medium text-neutral-700 dark:text-neutral-dark-700 mb-0">support@GeNext.io</p>
           </div>
         </div>
         <div class="flex flex-col item-center justify-center text-center">
