--- a/force-for-good.html
+++ b/force-for-good.html
@@ -253,9 +253,9 @@
     <!--Hero 1-->
     <section id="certification" class="relative py-20 lg:py-24 lg:mb-16">
         <div class="container px-4">
-            <h1 class="heading-1">Genext <span class="font-light">Certification</span></h1>
+            <h1 class="heading-1">GeNext <span class="font-light">Certification</span></h1>
             <div class="flex justify-between items-center gap-8 lg:gap-32 mt-12 flex-col lg:flex-row">
-                <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">Genext
+                <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">GeNext
                     Certification is
                     tailor-made for SMEs. If you operate for profit and have been in business for at least 12 months,
                     you're
@@ -419,7 +419,7 @@
             <div class="border-t border-neutral-950 dark:border-neutral-dark-500 pb-20 "></div>
 
             <div class="pt-8">
-                <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© Genext Group 2025. Designed by <a
+                <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© GeNext Group 2025. Designed by <a
                         target="_blank" href="https://story-x.co.uk/"
                         class="text-neutral-950 dark:text-neutral-dark-950">StoryX</a>
                 </p>
