--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GeNext</title>
-  <meta name="description" content="Genext. Certification that goes beyond the ordinary." />
+  <meta name="description" content="GeNext. Certification that goes beyond the ordinary." />
   <meta name="keywords" content="GeNext, Culture, Customers, Community, Business Transformation, Employee Engagement, Customer Experience, Purpose-led Growth" />
   <meta name="author" content="GeNext" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="GeNext - Culture. Customers. Community.">
-  <meta property="og:description" content="Genext. Certification that goes beyond the ordinary.">
+  <meta property="og:description" content="GeNext. Certification that goes beyond the ordinary.">
   <meta property="og:image" content="assets/imgs/social/social.webp">
-  <meta property="og:url" content="https://genext.io">
+  <meta property="og:url" content="https://GeNext.io">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="GeNext - Culture. Customers. Community.">
-  <meta name="twitter:description" content="Genext. Certification that goes beyond the ordinary.">
+  <meta name="twitter:description" content="GeNext. Certification that goes beyond the ordinary.">
   <meta name="twitter:image" content="assets/imgs/social/social.webp">
 
   <link rel="icon" href="assets/imgs/template/favicon.svg" type="image/svg+xml" />
@@ -190,12 +190,12 @@
     <div class="container px-4">
       <div class="md:w-3/4 lg:w-3/4">
         <h1 class="heading-2 max-w-7xl mb-12 text-neutral-950 dark:text-neutral-dark-950"><span
-            class="font-light">Genext.</span> Certification that<span class="font-light"> goes beyond</span>
+            class="font-light">GeNext.</span> Certification that<span class="font-light"> goes beyond</span>
           the ordinary.
         </h1>
-        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">At Genext, we provide an
+        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">At GeNext, we provide an
           evaluation of your business, encompassing every aspect from employees to customers and you community. </p>
-        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">Achieving Genext Certification
+        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">Achieving GeNext Certification
           signifies that your business meets the highest standards of performance, ethics, and innovation. Our
           certification process, tailored specifically for SMEs, is designed to be both affordable and accessible.
           For-profit organisations that have been operating for at least 12 months are eligible to join the ranks of
@@ -253,7 +253,7 @@
 
         <div class="grid md:grid-cols-1 lg:grid-cols-2 gap-x-[30px] gap-y-[65px] max-w-[850px]">
           <div class="flex-col justify-start items-start gap-5 inline-flex hover-up">
-            <a href="genext-launch.html" class="rounded-3xl overflow-hidden max-h-[606px]">
+            <a href="GeNext-launch.html" class="rounded-3xl overflow-hidden max-h-[606px]">
               <img src="assets/imgs/pages/launch.webp" />
             </a>
             <div class="flex-col justify-start items-start gap-3.5 flex">
@@ -267,7 +267,7 @@
                 </div>
               </div>
               <h3><a class="text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold leading-snug item-link"
-                  href="genext-launch.html">This Earth day, Genext Launches</a></h3>
+                  href="GeNext-launch.html">This Earth day, GeNext Launches</a></h3>
             </div>
           </div>
           <div class="flex-col justify-start items-start gap-5 inline-flex hover-up">
@@ -319,7 +319,7 @@
                 </div>
               </div>
               <h3><a class="text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold leading-snug item-link"
-                  href="certification-beyond.html">Genext: Certification that goes
+                  href="certification-beyond.html">GeNext: Certification that goes
                   beyond the ordinary</a></h3>
             </div>
           </div>
@@ -444,9 +444,9 @@
   <!--Hero 1-->
   <section id="certification" class="relative py-20 lg:py-24 lg:mb-16">
     <div class="container px-4">
-      <h1 class="heading-1">Genext <span class="font-light">Certification</span></h1>
+      <h1 class="heading-1">GeNext <span class="font-light">Certification</span></h1>
       <div class="flex justify-between items-center gap-8 lg:gap-32 mt-12 flex-col lg:flex-row">
-        <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">Genext Certification is
+        <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">GeNext Certification is
           tailor-made for SMEs. If you operate for profit and have been in business for at least 12 months, you're
           eligible. </p>
 
@@ -598,7 +598,7 @@
       <div class="border-t border-neutral-950 dark:border-neutral-dark-500 pb-20 "></div>
 
       <div class="pt-8">
-        <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© Genext Group 2025. Designed by <a
+        <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© GeNext Group 2025. Designed by <a
             target="_blank" href="https://story-x.co.uk/" class="text-neutral-950 dark:text-neutral-dark-950">StoryX</a>
         </p>
       </div>
