--- a/subscribe.html
+++ b/subscribe.html
@@ -5,21 +5,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GeNext</title>
-  <meta name="description" content="Genext. Certification that goes beyond the ordinary." />
+  <meta name="description" content="GeNext. Certification that goes beyond the ordinary." />
   <meta name="keywords" content="GeNext, Culture, Customers, Community, Business Transformation, Employee Engagement, Customer Experience, Purpose-led Growth" />
   <meta name="author" content="GeNext" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="GeNext - Culture. Customers. Community.">
-  <meta property="og:description" content="Genext. Certification that goes beyond the ordinary.">
+  <meta property="og:description" content="GeNext. Certification that goes beyond the ordinary.">
   <meta property="og:image" content="assets/imgs/social/social.webp">
-  <meta property="og:url" content="https://genext.io">
+  <meta property="og:url" content="https://GeNext.io">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="GeNext - Culture. Customers. Community.">
-  <meta name="twitter:description" content="Genext. Certification that goes beyond the ordinary.">
+  <meta name="twitter:description" content="GeNext. Certification that goes beyond the ordinary.">
   <meta name="twitter:image" content="assets/imgs/social/social.webp">
 
   <link rel="icon" href="assets/imgs/template/favicon.svg" type="image/svg+xml" />
@@ -209,7 +209,7 @@
       <div class="border-t border-neutral-950 dark:border-neutral-dark-500 pb-20 "></div>
 
       <div class="pt-8">
-        <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© Genext Group 2025. Designed by <a
+        <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© GeNext Group 2025. Designed by <a
             target="_blank" href="https://story-x.co.uk/" class="text-neutral-950 dark:text-neutral-dark-950">StoryX</a>
         </p>
       </div>
