--- a/james.html
+++ b/james.html
@@ -192,7 +192,7 @@
             <img class="rounded-3xl md:min-w-96" src="assets/imgs/pages/img-30.png" alt="">
           </div>
           <div class="p-2 md:p-2 lg:py-12 md:pl-8 lg:pl-16">
-            <h3 class="heading-3 mb-4">Sarah Emily</h3>
+            <h3 class="heading-3 mb-4">James Murphy</h3>
             <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:max-w-[810px]">You should
               write because you love the shape of stories and sentences and the creation of different words on a page.
               Graduating from a top accelerator or incubator can be as career-defining for a startup founder as an elite
